--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "browser-history": "^1.0.1",
     "font-awesome": "^4.7.0",
+    "query-string": "^5.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-history": "^0.18.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "shuffle-array": "^1.0.1",
