--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "browser-history": "^1.0.1",
     "font-awesome": "^4.7.0",
+    "infinite-scroll": "^3.0.6",
     "prop-types": "^15.7.2",
     "query-string": "^5.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-history": "^0.18.2",
+    "react-infinite-scroll-component": "^4.5.3",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-simple-infinite-loading": "^1.0.0-alpha.4",
+    "react-simple-infinite-scroll": "0.0.1",
     "shuffle-array": "^1.0.1",
     "url": "^0.11.0",
     "url-parse": "^1.4.7"
