--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-history": "^0.18.2",
-    "react-infinite-scroll-component": "^4.5.3",
-    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-simple-infinite-loading": "^1.0.0-alpha.4",
-    "react-simple-infinite-scroll": "0.0.1",
     "shuffle-array": "^1.0.1",
     "url": "^0.11.0",
     "url-parse": "^1.4.7"
@@ -48,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-test-renderer": "^16.10.1"
   }
 }
